--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script type="text/javascript" src="Javathcript.js"></script>
   </head>
 
   <div class="container">
@@ -12,6 +13,19 @@
     </div>
 
     <img src="background.jpg" class="center">
+
+    <script type="text/lisp">
+    (def document (js "document"))
+    (def body (js "document.body"))
+    (def window (js "window"))
+    (def getElement (method document "getElementById"))
+    (def alert (method window "alert"))
+    (def message alert)
+    (def confirm (method window "confirm"))
+    (def console (js "console"))
+
+    (alert "hello")
+    </script>
 
 </div>
 </body>
