added lisp file for getting the correct path

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1 class="text-center">481 Project 1</h1>
     </div>
 
-    <img src="background.jpg" class="center">
+    <img src="background2.jpg" class="center">
 
     <script type="text/lisp">
     (def document (js "document"))
